# minimal_linux_commands

./: .clang-format  .gitignore  .vscode-ctags  CMakeLists.txt  README.md
cmake/: cpack.cmake  cppcheck.cmake  dependencies.cmake  format.cmake  options.cmake
documentation/: documentation.md
projects/: CMakeLists.txt
projects/lsof/: lsof  lsof.c  lsof.md
projects/lsof/output/: lsof
